[gd_scene load_steps=10 format=3 uid="uid://h1wytnfqjfa8"]

[ext_resource type="Script" uid="uid://dbwnflsbw4px7" path="res://Scripts/options.gd" id="1_qyyw6"]
[ext_resource type="FontFile" uid="uid://clsljof7eceka" path="res://UI_Assets/trebuc.ttf" id="2_ww8vx"]
[ext_resource type="AudioStream" uid="uid://xc8qn3nmw3n5" path="res://Assets_Other/Select.mp3" id="3_kftxf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7yma"]
bg_color = Color(0.327809, 0.500154, 0.632355, 0.752941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_663nc"]
bg_color = Color(0.321569, 0.662745, 0.678431, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvj8k"]
bg_color = Color(0.427604, 0.858135, 0.883993, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38txh"]
bg_color = Color(0.338677, 0.786271, 0.810463, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5a0sy"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5vgl"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 10

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyyw6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y7yma")

[node name="Options" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = 390.0
offset_bottom = -12.0
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AUDIO" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "AUDIO:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Master:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MASTER" type="HSlider" parent="Panel/Options/Label3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -7.5
offset_right = 1506.0
offset_bottom = 8.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_663nc")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_hvj8k")
max_value = 1.2
step = 0.001
value = 1.0

[node name="Label4" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Sound FX:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFX" type="HSlider" parent="Panel/Options/Label4"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -8.0
offset_right = 1506.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_663nc")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_hvj8k")
max_value = 1.2
step = 0.001
value = 1.0

[node name="Label5" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Music:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MUSIC" type="HSlider" parent="Panel/Options/Label5"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -8.0
offset_right = 1506.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_663nc")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_hvj8k")
max_value = 1.2
step = 0.001
value = 1.0

[node name="DISPLAY" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "DISPLAY:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Resolution:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="RES" type="OptionButton" parent="Panel/Options/Label6"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -18.0
offset_right = 1506.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_38txh")
selected = 2
item_count = 5
popup/item_0/text = " 1280x720"
popup/item_0/id = 0
popup/item_1/text = " 1600x900"
popup/item_1/id = 1
popup/item_2/text = " 1920x1080"
popup/item_2/id = 2
popup/item_3/text = " 2560x1440"
popup/item_3/id = 3
popup/item_4/text = " 3480x2160"
popup/item_4/id = 4

[node name="Label7" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Window:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WINDOW" type="OptionButton" parent="Panel/Options/Label7"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -18.0
offset_right = 1506.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_38txh")
selected = 0
item_count = 4
popup/item_0/text = " Fullscreen"
popup/item_0/id = 0
popup/item_1/text = " Exclusive Fullscreen"
popup/item_1/id = 1
popup/item_2/text = " Windowed"
popup/item_2/id = 2
popup/item_3/text = " Windowed Borderless"
popup/item_3/id = 3

[node name="Label8" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "V-Sync:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSYNC" type="OptionButton" parent="Panel/Options/Label8"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -18.0
offset_right = 1506.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_38txh")
selected = 0
item_count = 2
popup/item_0/text = " On"
popup/item_0/id = 0
popup/item_1/text = " Off"
popup/item_1/id = 1

[node name="Label9" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Max FPS:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FPS" type="OptionButton" parent="Panel/Options/Label9"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -18.0
offset_right = 1506.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_38txh")
selected = 0
item_count = 5
popup/item_0/text = " 240"
popup/item_0/id = 0
popup/item_1/text = " 144"
popup/item_1/id = 1
popup/item_2/text = " 120"
popup/item_2/id = 2
popup/item_3/text = " 60"
popup/item_3/id = 3
popup/item_4/text = " 30"
popup/item_4/id = 4

[node name="GAME" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "GAME:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Autosave:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AUTOSAVE" type="OptionButton" parent="Panel/Options/Label10"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -18.0
offset_right = 1506.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_38txh")
selected = 1
item_count = 2
popup/item_0/text = " On"
popup/item_0/id = 0
popup/item_1/text = " Off"
popup/item_1/id = 1

[node name="Label11" type="Label" parent="Panel/Options"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 40
text = "Keybinds:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Save" type="Button" parent="Panel/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/hover = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/normal = SubResource("StyleBoxFlat_g5vgl")
text = "Save"

[node name="Exit" type="Button" parent="Panel/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ww8vx")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/hover = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5a0sy")
theme_override_styles/normal = SubResource("StyleBoxFlat_g5vgl")
text = "Exit"

[node name="SOUND" type="AudioStreamPlayer2D" parent="."]
position = Vector2(960, 540)
stream = ExtResource("3_kftxf")
volume_db = 3.0
bus = &"SFX"

[connection signal="value_changed" from="Panel/Options/Label3/MASTER" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Panel/Options/Label4/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="Panel/Options/Label5/MUSIC" to="." method="_on_music_value_changed"]
[connection signal="item_selected" from="Panel/Options/Label6/RES" to="." method="_on_res_item_selected"]
[connection signal="item_selected" from="Panel/Options/Label7/WINDOW" to="." method="_on_window_item_selected"]
[connection signal="item_selected" from="Panel/Options/Label8/VSYNC" to="." method="_on_vsync_item_selected"]
[connection signal="item_selected" from="Panel/Options/Label9/FPS" to="." method="_on_fps_item_selected"]
[connection signal="item_selected" from="Panel/Options/Label10/AUTOSAVE" to="." method="_on_autosave_item_selected"]
[connection signal="pressed" from="Panel/Options/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/Options/Exit" to="." method="_on_exit_pressed"]
